# fswatch

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.libfswatch  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  LICENSE  Makefile  Makefile.am  NEWS  NEWS.libfswatch  README  README.bsd  README.cmake  README.codestyle  README.freebsd  README.gnu-build-system  README.illumos  README.libfswatch.md  README.linux  README.macos  README.md  README.osx  README.smartos  README.solaris  README.windows  autogen.sh  build-from-scratch.sh  bump-version.sh  cmake_config.h.in  configure-debug.sh  configure.ac  documentation.html  event.cpp  (+30 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  cmake-libfswatch-win.yml  cmake-libfswatch.yml  cmake-win.yml  cmake.yml  release-tarball.yml  release.yml
build-aux/: configure-debug-static.sh  configure-debug.sh  configure-release.sh  create-pot-template.sh.in  git-generate-revision.sh  git-generate-version.sh
cmake/: FindPthreads.cmake
debian/: changelog  control  copyright
doc/: Makefile.am  fswatch.texi  index.html
doc/1.10.0/: index.html
doc/1.11.0/: index.html
doc/1.11.1/: index.html
doc/1.11.2/: index.html
doc/1.11.3/: index.html
doc/1.12.0/: index.html
doc/1.13.0/: index.html
doc/1.14.0/: index.html
docker/: build-images.sh
docs/: Doxyfile.in
fswatch/: Makefile.am
fswatch/src/: CMakeLists.txt  Makefile.am  fswatch.cpp  fswatch.hpp  gettext.h
fswatch/src/windows/: CMakeLists.txt  getopt.c  getopt.h
libfswatch/: .version  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac  libfswatch_config.h.in  libfswatch_config.in
libfswatch/build-aux/: git-generate-version.sh
libfswatch/c/: cevent.h  cfilter.h  cmonitor.h  libfswatch.cpp  libfswatch.h  libfswatch_log.cpp  libfswatch_log.h
libfswatch/c++/: event.h  filter.h  fsevent_monitor.cpp  fsevent_monitor.h  fsevents_monitor.cpp  fsevents_monitor.h  inotify_monitor.cpp  inotify_monitor.h  kqueue_monitor.cpp  kqueue_monitor.h  libfswatch_exception.cpp  libfswatch_exception.h  libfswatch_map.h  libfswatch_set.h  monitor.cpp  monitor.h  path_utils.cpp  path_utils.h  poll_monitor.cpp  poll_monitor.h
libfswatch/cmake/: libfswatchConfig.cmake.in
libfswatch/doc/: Makefile.am  libfswatch.texi
libfswatch/doc/doxygen/: Doxyfile.in  Makefile.am
libfswatch/doc/texinfo/: libfswatch.texi
libfswatch/m4/: ax_cxx_compile_stdcxx_11.m4  ax_cxx_compile_stdcxx_14.m4  ax_cxx_have_thread.m4  ax_cxx_have_thread_local.m4  libfswatch_version.m4
libfswatch/po/: LINGUAS  POTFILES.in  es.po  fswatch.pot  it.po  libfswatch.pot
libfswatch/src/: Makefile.am  libfswatch.pc.in
libfswatch/src/libfswatch/: Makefile.am  gettext.h  gettext_defs.h
libfswatch/src/libfswatch/c/: CMakeLists.txt  cevent.cpp  cevent.h  cfilter.h  cmonitor.h  error.h  fsw_error.h  libfswatch.cpp  libfswatch.h  libfswatch_log.cpp  libfswatch_log.h  libfswatch_mem.cpp  libfswatch_mem.h  libfswatch_types.h
libfswatch/src/libfswatch/c++/: .#windows_monitor.cpp  CMakeLists.txt  event.cpp  event.h  event.hpp  fanotify_monitor.cpp  fanotify_monitor.hpp  fen.hpp  fen_monitor.cpp  fen_monitor.hpp  filter.cpp  filter.h  filter.hpp  fsevents_monitor.cpp  fsevents_monitor.h  fsevents_monitor.hpp  inotify_monitor.cpp  inotify_monitor.h  inotify_monitor.hpp  kqueue_monitor.cpp  kqueue_monitor.h  kqueue_monitor.hpp  libfswatch_exception.cpp  libfswatch_exception.h  libfswatch_exception.hpp  libfswatch_map.h  libfswatch_map.hpp  libfswatch_set.hpp  monitor.cpp  monitor.h  monitor.hpp  monitor_factory.cpp  monitor_factory.hpp  path_utils.cpp  path_utils.hpp  poll_monitor.cpp  poll_monitor.h  poll_monitor.hpp  windows_monitor.cpp  windows_monitor.hpp
libfswatch/src/libfswatch/c++/string/: CMakeLists.txt  string_utils.cpp  string_utils.hpp
libfswatch/src/libfswatch/c++/windows/: CMakeLists.txt  cygwin_paths.cpp  win_directory_change_event.cpp  win_directory_change_event.hpp  win_error_message.cpp  win_error_message.hpp  win_handle.cpp  win_handle.hpp  win_paths.cpp  win_paths.hpp  win_strings.cpp  win_strings.hpp
libfswatch/src/libfswatch/c/windows/: realpath.c
libfswatch/src/libfswatch/gettext/: CMakeLists.txt  gettext.h  gettext_defs.h
m4/: ax_cxx_compile_stdcxx_0x.m4  ax_date.m4  ax_fsevents_have_file_events.m4  ax_git_current_branch.m4  ax_prog_date.m4  emc_path_prog.m4  fswatch_version.m4  libfswatch_version.m4
man/: fswatch.7  fswatch.7.in
po/: LINGUAS  Makevars  POTFILES.in  en.po  en@boldquot.po  en@quot.po  es.po  fswatch.pot  it.po
scripts/: fswatch-run  fswatch-run-bash  fswatch-run-bash.in  fswatch-run-zsh  fswatch-run-zsh.in
src/: CMakeLists.txt  Makefile.am  fswatch.cpp  fswatch.h  fswatch.hpp  fswatch_log.cpp  fswatch_log.h
stylesheets/: stylesheet.css
test/: Makefile.am  STRESS_TESTS.md  fanotify_access_events.sh  fanotify_basic.sh  fanotify_filter_mode.sh  fanotify_filter_root_path.sh  fanotify_prune.sh  fanotify_prune_root_path.sh  fanotify_unlimited_properties.sh  fen_filter_root_file.sh  filter_mode.sh  filter_root_file.sh  filter_root_path.sh  fsevents_filter_mode.sh  fsevents_filter_root_path.sh  inotify_access_events.sh  inotify_basic_events.sh  inotify_burst_create.sh  inotify_filter_mode.sh  inotify_filter_root_file.sh  inotify_filter_root_path.sh  inotify_missing_root_rescan.sh  inotify_prune.sh  inotify_prune_root_path.sh  inotify_queue_drain.sh  inotify_recursive_create.sh  inotify_watched_directory_replace.sh  inotify_watched_file_recreate.sh  kqueue_filter_root_file.sh  poll_filter_mode.sh  poll_filter_root_file.sh  poll_filter_root_path.sh  poll_prune.sh  poll_prune_root_path.sh  prune.sh  prune_root_path.sh
test/cmake/: libfswatch_package_consumer.cmake
test/src/: CMakeLists.txt  filter_mode_test.cpp  fsevents_cf_paths_test.cpp  fsevents_missing_inode_test.cpp  fswatch_test.c  fswatch_test.cpp  inotify_stop_latency_test.cpp  inotify_stop_with_pending_events_test.cpp  inotify_stop_with_ready_events_test.cpp  prune_c_api_test.cpp
(+4549 files in other folders)
